[tool.poetry]
name = "movielinker"
version = "0.1.0"
description = ""
authors = ["Grant Muller <grantmuller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tmdbsimple = "^2.2.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[tool.poetry.scripts]
movielinker = 'movielinker.movielinker:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
